fix(table): wrong alignment of buttons

--- a/apps/client/src/widgets/note_bars/CollectionProperties.css
+++ b/apps/client/src/widgets/note_bars/CollectionProperties.css
@@ -25,6 +25,10 @@
         justify-content: center;
     }
 
+    .right-container {
+        justify-content: flex-end;
+    }
+
     button.btn {
         min-width: 0;
     }
